--- a/trunk/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/AjaxClient/default.htm
+++ b/trunk/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/AjaxClient/default.htm
@@ -21,6 +21,7 @@
 <script type="text/javascript" src="js/wcf-ostynscormtime.js"></script>
 <script type="text/javascript" src="js/AjaxStack.snippets.js"></script>
 <script type="text/javascript" src="js/RedisClient.js"></script>
+<script type="text/javascript" src="js/JSV.js"></script>
 
 <script type="text/javascript">
     goog.require('goog.debug.DivConsole');
@@ -88,7 +89,7 @@
         <div id="searchbox">
             <input id="txtQuery" type="text" value="urn:*"/>
             <button id="btnSearch">Search Keys</button>
-            <button id="btnPopulate">Populate with Data</button>
+            <!--<button id="btnPopulate">Populate with Data</button>-->
         </div>
     </div>
 
@@ -99,7 +100,7 @@
         <div id="content" class='goog-splitpane-second-container'>
             <div id="tab" class="goog-tab-bar goog-tab-bar-top">
                 <div class="goog-tab goog-tab-selected">Start Page</div>
-                <div id="mainNav-tab" class="goog-tab">Main Tab<img class="close-tab" src="images/close_box.gif" title="close tab" /></div>
+                <!--<div id="mainNav-tab" class="goog-tab">Main Tab<img class="close-tab" src="images/close_box.gif" title="close tab" /></div>-->
             </div>
             <!-- Use goog-tab-bar-clear to separate the tabs from the content. -->
             <div class="goog-tab-bar-clear"></div>
