--- a/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/AjaxClient/benchmarks.htm
+++ b/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/AjaxClient/benchmarks.htm
@@ -48,7 +48,6 @@
 
         #combined H3 {
             color: #073;
-            margin-left: 350px;
             margin-bottom: 0;
             border: none;
             font-size: 26px;
@@ -136,7 +135,7 @@
             });
 
             $("#btnRun").click(function() {
-                var times = 10000;
+                var times = 1000;
 
                 var typeResults = {};
                 var typeBenchmarkTimes = {};
@@ -159,34 +158,42 @@
                     var minPayload = jsonRow.length < jsvRow.length ? jsonRow.length : jsvRow.length;
 
                     var benchmarkTimes = [
-                        ['goog.serialize/goog.parse', jsonRow.length, Math.round((jsonRow.length / minPayload) * 100) / 100,
+                        ['goog.serialize/goog.parse',
+                            jsonRow.length,
+                            (jsonRow.length / minPayload).toFixed(2),
                             benchmarks[BENCHMARK_TYPE.GOOG_SERIALIZE],
                             benchmarks[BENCHMARK_TYPE.GOOG_PARSE],
                             benchmarks[BENCHMARK_TYPE.GOOG_SERIALIZE] + benchmarks[BENCHMARK_TYPE.GOOG_PARSE],
-                            Math.round(((benchmarks[BENCHMARK_TYPE.GOOG_SERIALIZE] + benchmarks[BENCHMARK_TYPE.GOOG_PARSE]) / times)*100)/100,
+                            ((benchmarks[BENCHMARK_TYPE.GOOG_SERIALIZE] + benchmarks[BENCHMARK_TYPE.GOOG_PARSE]) / times).toFixed(2),
                             0
                         ],
-                        ['goog.serialize/goog.unsafeParse', jsonRow.length, Math.round((jsonRow.length / minPayload) * 100) / 100,
+                        ['goog.serialize/goog.unsafeParse',
+                            jsonRow.length,
+                            (jsonRow.length / minPayload).toFixed(2),
                             benchmarks[BENCHMARK_TYPE.GOOG_SERIALIZE],
                             benchmarks[BENCHMARK_TYPE.GOOG_UNSAFE_PARSE],
                             benchmarks[BENCHMARK_TYPE.GOOG_SERIALIZE] + benchmarks[BENCHMARK_TYPE.GOOG_UNSAFE_PARSE],
-                            Math.round(((benchmarks[BENCHMARK_TYPE.GOOG_SERIALIZE] + benchmarks[BENCHMARK_TYPE.GOOG_UNSAFE_PARSE]) / times)*100)/100,
+                            ((benchmarks[BENCHMARK_TYPE.GOOG_SERIALIZE] + benchmarks[BENCHMARK_TYPE.GOOG_UNSAFE_PARSE]) / times).toFixed(2),
                             0
                         ],
-                        ['JSON.stringify/JSON.parse', jsonRow.length, Math.round((jsonRow.length / minPayload) * 100) / 100,
+                        ['JSON.stringify/JSON.parse',
+                            jsonRow.length,
+                            (jsonRow.length / minPayload).toFixed(2),
                             benchmarks[BENCHMARK_TYPE.JSON_STRINGIFY],
                             benchmarks[BENCHMARK_TYPE.JSON_PARSE],
                             benchmarks[BENCHMARK_TYPE.JSON_STRINGIFY] + benchmarks[BENCHMARK_TYPE.JSON_PARSE],
-                            Math.round(((benchmarks[BENCHMARK_TYPE.JSON_STRINGIFY] + benchmarks[BENCHMARK_TYPE.JSON_PARSE]) / times)*100)/100,
+                            ((benchmarks[BENCHMARK_TYPE.JSON_STRINGIFY] + benchmarks[BENCHMARK_TYPE.JSON_PARSE]) / times).toFixed(2),
                             0
                         ],
-                        ['JSV.stringify/JSV.parse', jsvRow.length, Math.round((jsvRow.length / minPayload) * 100) / 100,
+                        ['JSV.stringify/JSV.parse',
+                            jsvRow.length,
+                            (jsvRow.length / minPayload).toFixed(2),
                             benchmarks[BENCHMARK_TYPE.JSV_STRINGIFY],
                             benchmarks[BENCHMARK_TYPE.JSV_PARSE],
                             benchmarks[BENCHMARK_TYPE.JSV_STRINGIFY] + benchmarks[BENCHMARK_TYPE.JSV_PARSE],
-                            Math.round(((benchmarks[BENCHMARK_TYPE.JSV_STRINGIFY] + benchmarks[BENCHMARK_TYPE.JSV_PARSE]) / times)*100)/100,
+                            ((benchmarks[BENCHMARK_TYPE.JSV_STRINGIFY] + benchmarks[BENCHMARK_TYPE.JSV_PARSE]) / times).toFixed(2),
                             0
-                        ],
+                        ]
                     ];
                     typeBenchmarkTimes[rowType] = benchmarkTimes;
 
@@ -194,7 +201,7 @@
                     for (var i=0; i<benchmarkTimes.length; i++)
                     {
                         var benchmarkTime = benchmarkTimes[i];
-                        var totalTime = benchmarkTime[6];
+                        var totalTime = benchmarkTime[BENCHMARK.TOTAL_TIME];
 
                         if (i == 0 || totalTime < minTotalTime)
                         {
@@ -204,12 +211,81 @@
 
                     for (var i=0; i<benchmarkTimes.length; i++)
                     {
-                        benchmarkTimes[i][8] = benchmarkTimes[i][6] / minTotalTime;
+                        benchmarkTimes[i][BENCHMARK.TOTAL_TIME_RATIO] = (benchmarkTimes[i][BENCHMARK.TOTAL_TIME] / minTotalTime).toFixed(2);
                     }
 
-                    var html = getTableHtml(rowType, times, benchmarkTimes);
+                    var html = getTableHtml(benchmarkTimes,
+                        'Results of serializing and deserializing ' + rowType + ' ' + times + ' times');
+
                     $("#results").append(html);
                 }
+
+
+                var combinedTimes = {};
+                var skipColumns = {0:true,2:true,8:true};
+
+                for (var rowType in typeBenchmarkTimes)
+                {
+                    var rowTypeBenchmarks = typeBenchmarkTimes[rowType];
+
+                    for (var i=0; i<rowTypeBenchmarks.length; i++)
+                    {
+                        var serializationTypeBenchmarks = rowTypeBenchmarks[i];
+                        var rowHeading = serializationTypeBenchmarks[0];
+                        if (!combinedTimes[rowHeading])
+                        {
+                            combinedTimes[rowHeading] = serializationTypeBenchmarks.slice(0); //clone
+                        }
+                        else
+                        {
+                            for (var j=0; j<serializationTypeBenchmarks.length; j++)
+                            {
+                                if (skipColumns[j]) continue;
+
+                                combinedTimes[rowHeading][j] += serializationTypeBenchmarks[j];
+                            }
+                        }
+                    }
+                }
+
+                var minPayload = 0;
+                var minTotalTime = 0;
+                for (var rowHeading in combinedTimes)
+                {
+                    var combinedTime = combinedTimes[rowHeading];
+
+                    var totalSize = combinedTime[BENCHMARK.PAYLOAD_SIZE];
+                    if (minPayload == 0 || totalSize < minPayload)
+                    {
+                        minPayload = totalSize;
+                    }
+
+                    var totalTime = combinedTime[BENCHMARK.TOTAL_TIME];
+                    if (minTotalTime == 0 || totalTime < minTotalTime)
+                    {
+                        minTotalTime = totalTime;
+                    }
+                }
+
+                var combinedBenchmarkTimes = [];
+                for (var rowHeading in combinedTimes)
+                {
+                    var combinedTime = combinedTimes[rowHeading];
+
+                    combinedTime[BENCHMARK.PAYLOAD_SIZE_RATIO] = (combinedTime[BENCHMARK.PAYLOAD_SIZE] / minPayload).toFixed(2);
+                    combinedTime[BENCHMARK.TOTAL_TIME_RATIO] = (combinedTime[BENCHMARK.TOTAL_TIME] / minTotalTime).toFixed(2);
+                    combinedTime[BENCHMARK.AVG_TOTAL_TIME] = (combinedTime[BENCHMARK.TOTAL_TIME] / times).toFixed(2);
+
+                    combinedBenchmarkTimes.push(combinedTime);
+                }
+
+                //$("#log").append(JSV.stringify(combinedBenchmarkTimes));
+
+
+                var html = getTableHtml(combinedBenchmarkTimes,
+                    'Combined results of all benchmarks below (' + times + ' times)');
+
+                $("#combined").html(html);
 
                 //$("#log").html(JSV.stringify(typeResults));
             });
@@ -223,6 +299,18 @@
                 JSON_STRINGIFY: 5,
                 JSV_PARSE: 6,
                 JSV_STRINGIFY: 7
+            };
+
+            var BENCHMARK =
+            {
+                NAME: 0,
+                PAYLOAD_SIZE: 1,
+                PAYLOAD_SIZE_RATIO: 2,
+                SERIALIZATION_TIME: 3,
+                DESERIALIZATION_TIME: 4,
+                TOTAL_TIME: 5,
+                AVG_TOTAL_TIME: 6,
+                TOTAL_TIME_RATIO: 7
             };
 
             function runBenchmarks(times, row)
@@ -263,11 +351,18 @@
                 }
                 results[BENCHMARK_TYPE.GOOG_UNSAFE_PARSE] = new Date().getTime() - start;
 
-                start = new Date().getTime();
-                for (var i = 0; i < times; i++) {
-                    JSON.parse(json);
+                try
+                {
+                    start = new Date().getTime();
+                    for (var i = 0; i < times; i++) {
+                        JSON.parse(json);
+                    }
+                    results[BENCHMARK_TYPE.JSON_PARSE] = new Date().getTime() - start;
                 }
-                results[BENCHMARK_TYPE.JSON_PARSE] = new Date().getTime() - start;
+                catch(e)
+                {
+                    results[BENCHMARK_TYPE.JSON_PARSE] = -1;
+                }
 
                 start = new Date().getTime();
                 for (var i = 0; i < times; i++) {
@@ -278,10 +373,11 @@
                 return results;
             }
 
-            function getTableHtml(rowType, times, benchmarkTimes)
+
+            function getTableHtml(benchmarkTimes, heading)
             {
                 var sb = [];
-                sb.push('<h3>Results of serializing and deserializing ' + rowType + ' ' + times + ' times</h3>');
+                sb.push('<h3>' + heading + '</h3>');
                 sb.push('<table><caption>* All times measured in milliseconds</caption>');
                 sb.push('<thead>');
                 sb.push('<tr>');
@@ -300,14 +396,14 @@
                 for (var i=0; i<benchmarkTimes.length; i++)
                 {
                     sb.push('<tr>');
-                    sb.push('<td>' + benchmarkTimes[i][0] + '</td>');
-                    sb.push('<td>' + benchmarkTimes[i][1] + '</td>');
-                    sb.push('<td>' + benchmarkTimes[i][2] + '</td>');
-                    sb.push('<td>' + benchmarkTimes[i][3] + '</td>');
-                    sb.push('<td>' + benchmarkTimes[i][4] + '</td>');
-                    sb.push('<td>' + benchmarkTimes[i][5] + '</td>');
-                    sb.push('<td>' + benchmarkTimes[i][6] + '</td>');
-                    sb.push('<td>' + benchmarkTimes[i][7] + '</td>');
+                    sb.push('<td>' + benchmarkTimes[i][BENCHMARK.NAME] + '</td>');
+                    sb.push('<td>' + benchmarkTimes[i][BENCHMARK.PAYLOAD_SIZE] + '</td>');
+                    sb.push('<td>' + benchmarkTimes[i][BENCHMARK.PAYLOAD_SIZE_RATIO] + '</td>');
+                    sb.push('<td>' + benchmarkTimes[i][BENCHMARK.SERIALIZATION_TIME] + '</td>');
+                    sb.push('<td>' + benchmarkTimes[i][BENCHMARK.DESERIALIZATION_TIME] + '</td>');
+                    sb.push('<td>' + benchmarkTimes[i][BENCHMARK.TOTAL_TIME] + '</td>');
+                    sb.push('<td>' + benchmarkTimes[i][BENCHMARK.AVG_TOTAL_TIME] + '</td>');
+                    sb.push('<td>' + benchmarkTimes[i][BENCHMARK.TOTAL_TIME_RATIO] + '</td>');
                     sb.push('</tr>');
                 }
                 sb.push('</tbody>');
@@ -335,66 +431,7 @@
 
 <button id="btnRun" disabled="disabled">Run Benchmarks</button>
 
-<div id='combined'>
-    <h3>Combined results of all benchmarks below</h3>
-    <table>
-        <caption>* All times measured in ticks and payload size in bytes</caption>
-        <thead>
-        <tr>
-            <th>Serializer</th>
-            <th>Payload size</th>
-            <th>Larger than best</th>
-            <th>Serialization</th>
-            <th>Deserialization</th>
-            <th>Total</th>
-            <th>Avg per iteration</th>
-            <th>Slower than best</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr class=''>
-            <th class='c1'>goog.serialize/goog.parse</th>
-            <td>4097</td>
-            <th>4.68x</th>
-            <td>235392060</td>
-            <td>643889088</td>
-            <td>879281148</td>
-            <td>879.2811</td>
-            <th>6.72x</th>
-        </tr>
-        <tr class=''>
-            <th class='c1'>goog.serialize/goog.unsafeParse</th>
-            <td>4097</td>
-            <th>4.68x</th>
-            <td>235392060</td>
-            <td>643889088</td>
-            <td>879281148</td>
-            <td>879.2811</td>
-            <th>6.72x</th>
-        </tr>
-        <tr class=''>
-            <th class='c1'>JSON.parse/JSON.stringify</th>
-            <td>4097</td>
-            <th>4.68x</th>
-            <td>235392060</td>
-            <td>643889088</td>
-            <td>879281148</td>
-            <td>879.2811</td>
-            <th>6.72x</th>
-        </tr>
-        <tr class=''>
-            <th class='c1'>JSV.parse/JSV.stringify</th>
-            <td>1958</td>
-            <th>2.24x</th>
-            <td>400010575</td>
-            <td>932212071</td>
-            <td>1332222646</td>
-            <td>1332.2226</td>
-            <th>10.18x</th>
-        </tr>
-        </tbody>
-    </table>
-</div>
+<div id='combined'></div>
 
 <div id='results'>
 
