Default to use the IIS6/Mono config since it has the best chance of working everywhere.

--- a/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/AjaxClient/debug.htm
+++ b/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/AjaxClient/debug.htm
@@ -121,7 +121,7 @@
                                 A <a href="http://www.servicestack.net">ServiceStack</a>
                                 ASP.NET Web Services server application providing SOAP, XML
                                 and JSON end points for all Redis operations. <br />
-                                It works cross-platform though as its writen in .NET
+                                It's cross-platform although as its written in .NET
                                 <a href="http://www.mono-project.com/ASP.NET">requires Mono to run on Linux</a>.
                             </li>
                         </ol>
